chore: jetty12
to fix: context path not working for servlets